# adaptagrams

./: .gitignore
cola/: CMakeLists.txt  Makefile.am  conanfile.txt  flake.nix
cola/cmake/: FindCairomm.cmake
cola/libavoid/: CMakeLists.txt  connectionpin.h  connector.h  connend.h  debughandler.h  dllexport.h  geomtypes.h  hyperedge.h  junction.h  router.h  shape.h  vertices.h  viscluster.h
cola/libcola/: CMakeLists.txt  cola_log.h  colafd.cpp  config.h.in
cola/libdialect/: CMakeLists.txt
cola/libtopology/: CMakeLists.txt  cola_topology_addon.cpp  topology_constraints.cpp  topology_constraints_constructor.cpp  topology_graph.cpp  topology_graph.h
cola/libvpsc/: CMakeLists.txt  rectangle.h
cola/nix/: overlay.nix
cola/nix/adaptagrams/: default.nix
